k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: europe-north1-docker.pkg.dev/demoglobalit-monitoring/demo/app:cb5e96b
        ports:
        - containerPort: 8080
